# robot

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  web_controller.py
LLM_Voice_Flow-master/voice/sherpa-onnx/: CMakeLists.txt
MCU/: MCU.uvguix.13458  MCU.uvoptx  MCU.uvprojx
MCU/1-LED/: 1-LED.uvguix.13458  1-LED.uvoptx  1-LED.uvprojx
MCU/1-LED/Listings/: template.map
MCU/1-LED/Objects/: 1-LED_default.dep  button.d  delay.crf  encoder.crf  encoder.d  main.crf  main.d  pwm.crf  pwm.d  stm32f10x_it.crf  template.axf  template.build_log.htm  template.hex  template.htm  template.lnp  usart.d  usart3.crf  usart3.d
MCU/1-LED/my_lib/: delay.c  encoder.c  encoder.h  pwm.c  usart3.c  usart3.h
MCU/1-LED/user/: main.c
MCU/Listings/: template.map
MCU/Objects/: 1-LED_default.dep  MCU_default.dep  delay.crf  encoder.crf  main.crf  main.d  misc.crf  pwm.crf  stm32f10x_adc.crf  stm32f10x_bkp.crf  stm32f10x_can.crf  stm32f10x_cec.crf  stm32f10x_crc.crf  stm32f10x_dac.crf  stm32f10x_dbgmcu.crf  stm32f10x_dma.crf  stm32f10x_exti.crf  stm32f10x_flash.crf  stm32f10x_fsmc.crf  stm32f10x_gpio.crf  stm32f10x_i2c.crf  stm32f10x_it.crf  stm32f10x_iwdg.crf  stm32f10x_pwr.crf  stm32f10x_rcc.crf  stm32f10x_rtc.crf  stm32f10x_sdio.crf  stm32f10x_spi.crf  stm32f10x_tim.crf  stm32f10x_usart.crf  stm32f10x_wwdg.crf  system_stm32f10x.crf  template.axf  template.build_log.htm  template.hex  template.htm  template.lnp  usart3.crf
MCU/my_lib/: delay.c  delay.h  encoder.c  pwm.c  pwm.h  usart3.c  usart3.h
MCU/user/: main.c  main.h  stm32f10x_it.c
doc/: 00_study_index.md  01_ros_shm_low_latency.md  02_ros1_ros2_switching_latency.md  03_edge_llm_agent_online_offline.md  04_vision_pipeline.md  05_upper_computer_control.md  06_stm32_mcu_firmware.md  07_navigation_system.md  08_lidar_pipeline.md  09_edge_monitoring.md  10_config_and_deployment.md  11_urdf_model.md  README.md  board_docker_deployment.md  container_zero_to_done_manual.md  detail_01_ros_shm_low_latency.md  detail_02_ros1_ros2_switching_latency.md  detail_03_edge_llm_agent_online_offline.md  detail_04_vision_pipeline.md  detail_05_upper_computer_control.md  detail_06_stm32_mcu_firmware.md  detail_07_navigation_system.md  detail_08_lidar_pipeline.md  detail_09_edge_monitoring.md  detail_10_config_and_deployment.md  detail_11_urdf_model.md  detail_index.md  project_deployment_manual.md
doc/note/: 01_低时延相机视觉链路.md  02_RK硬件加速接口使用说明.md  03_Agent系统全景分析报告.md  04_OpenCV接口使用手册.md  05_跟踪算法节点全景分析报告.md  06_Offline-Agent系统实现分析报告.md
docker/: docker-compose.orangepi.yml
docker/scripts/: collect_runtime_logs.py  collect_runtime_logs.sh  move_docker_data_root.sh  prepare_rk_vendor.sh  prepare_ydlidar_sdk.sh  robot_board_build.sh  robot_board_into.sh  robot_board_run.sh  robot_docker_run.sh
offline-agent/: monitor_processes.py  start.sh
offline-agent/llamacpp-ros/: CMakeLists.txt  package.xml
offline-agent/llamacpp-ros/lib/: libggml-base.so.0.9.5  libggml-cpu.so.0.9.5  libggml.so.0.9.5  libllama.so.0.0.7746  libmtmd.so.0.0.7746
offline-agent/llamacpp-ros/src/: StreamTaskDispatcher.cpp  StreamTaskDispatcher.h  cli.cpp
offline-agent/tts/: CMakeLists.txt  package.xml
offline-agent/tts/tts_server/src/: main.cpp
offline-agent/voice/sherpa-onnx/sherpa-onnx/voice/: CMakeLists.txt  sherpa-onnx-microphone.cc
rknn_export/RKNN-Toolkit2/: convert.py  requirements_cp38-1.5.0.txt
rknn_export/models/: yolov6n.onnx
ros2_ws/: env.md  shm_fastdds.xml
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/img_decode/: CMakeLists.txt  package.xml
ros2_ws/src/img_decode/src/: img_decode.cpp  img_decode.h  img_decode_sub.cpp  mpp_decode.cpp  mpp_decode.h  rga_resize.cpp  rga_resize.h
ros2_ws/src/my_package/: package.xml
ros2_ws/src/usb_camera/: CMakeLists.txt  package.xml
ros2_ws/src/usb_camera/src/: test_sub.cc  test_v4l2.cpp  usb_camera.cpp  v4l2.cpp  v4l2.h
src/agent/: asr.py  cloud_music.py  config.json.example  config_manager.py  emoji.py  fix.sh  function_executor.py  head_servo_controller.py  lcd.py  llm.py  main.py  navigation_controller.py  offline_main_.py  requirements.txt  robot_following_controller.py  search_engine.py  servo_controller_pwm.py  start_agent.sh
src/base_control/: package.xml
src/base_control/cfg/: Base.cfg
src/base_control/src/: base_control.cpp  base_control.h  pid.cpp  pid.h  uart.cpp  uart.h
src/config/: install.sh  rc.local  start.sh
src/img_decode/: package.xml
src/img_decode/launch/: img_decode.launch
src/img_decode/src/: img_decode.cpp  img_decode.h  img_decode_sub.cpp  mpp_decode.cpp  mpp_decode.h  rga_resize.cpp  rga_resize.h  shm_img_decode.cpp  shm_img_decode.h  shm_img_decode_test.cpp
src/img_encode/: package.xml
src/img_encode/src/: img_encode.cpp  img_encode.h  mpp_encode.cpp  mpp_encode.h  rga_cvtcolor.cpp  rga_cvtcolor.h
src/monitor/: CMakeLists.txt  package.xml
src/monitor/include/monitor/: cpu_load_monitor.h  cpu_softirq_monitor.h  cpu_stat_monitor.h  mem_monitor.h  monitor_helper.h  monitor_inter.h  net_monitor.h  process_monitor.h
src/monitor/msg/: CpuLoad.msg  CpuSoftIrq.msg  CpuStat.msg  MemInfo.msg  MonitorInfo.msg  NetInfo.msg  NodeMonitorInfo.msg
src/monitor/src/: main.cpp
src/monitor/src/monitor/: cpu_load_monitor.cpp  cpu_softirq_monitor.cpp  cpu_stat_monitor.cpp  mem_monitor.cpp  monitor_helper.cpp  net_monitor.cpp  process_monitor.cpp
src/monitor/srv/: RegisterNode.srv  UnregisterNode.srv
src/object_track/src/: object_track.cpp
src/pkg_launch/launch/: all.launch
src/rknn_yolov6/: CMakeLists.txt
src/rknn_yolov6/src/: Queue.h  main.cpp  rknn_run.cpp  rknn_run.h  utils.cpp
src/robot_navigation/config/: debug.conf
src/robot_navigation/launch/: blank_map_move_base.launch  complete_slam.launch  explore.launch  move_base.launch  robot_navigation.launch  robot_slam.launch
src/shm_transport/: CMakeLists.txt  package.xml
src/urdf_tutorial/: CMakeLists.txt  package.xml
src/urdf_tutorial/launch/: display.launch  display_myfirst.launch
src/urdf_tutorial/urdf/: myfirst.urdf
templates/: index.html  settings.html  wifi_config.html
(+38 files in other folders)
