<?xml version="1.0"?>
<package format="2">
  <name>tts_server</name>
  <version>1.0.0</version>
  <description>TTS Server ROS node for text-to-speech synthesis</description>
  
  <maintainer email="robot@example.com">Robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

